# JoyShockLibrary

./: .gitignore  CMakeLists.txt  JoyShockLibrary.sln  LICENSE.md  README.md
JoyShockLibrary/: CMakeLists.txt  GamepadMotion.hpp  InputHelpers.cpp  InputHelpers.h  JoyShock.cpp  JoyShock.h  JoyShockLibrary.cpp  JoyShockLibrary.h  JoyShockLibrary.pas  JoyShockLibrary.vcxproj  JoyShockLibrary.vcxproj.filters  SensorFusion.cpp  SensorFusion.h  stdafx.cpp  tools.cpp  tools.h
cmake/: LinuxConfig.cmake  WindowsConfig.cmake
scripts/: generate_win32_vs_solution.bat  generate_win64_vs_solution.bat
